--- a/arco-design-pro-next/src/pages/visualization/data-analysis/style/public-opinion.module.less
+++ b/arco-design-pro-next/src/pages/visualization/data-analysis/style/public-opinion.module.less
@@ -1,3 +1,21 @@
+@line-card-bg: linear-gradient(180deg, rgb(242 249 254) 0%, #e6f4fe 100%);
+
+@interval-card-bg: linear-gradient(
+  180deg,
+  rgb(245 254 242) 0%,
+  rgb(230 254 238) 100%
+);
+
+@pie-card-bg: linear-gradient(
+  180deg,
+  rgb(247 247 255) 0%,
+  rgb(236 236 255) 100%
+);
+
+@line-card-dark-bg: linear-gradient(180deg, #284991 0%, #122b62 100%);
+@interval-card-dark-bg: linear-gradient(180deg, #3d492e 0%, #263827 100%);
+@pie-card-dark-bg: linear-gradient(180deg, #312565 0%, #201936 100%);
+
 .card {
   display: flex;
   padding: 20px;
@@ -6,30 +24,15 @@
   min-height: 100px;
 
   &-line {
-    background:
-      linear-gradient(
-        180deg,
-        rgb(242 249 254) 0%,
-        rgb(230 244 254) 100%
-      );
+    background: @line-card-bg;
   }
 
   &-interval {
-    background:
-      linear-gradient(
-        180deg,
-        rgb(245 254 242) 0%,
-        rgb(230 254 238) 100%
-      );
+    background: @interval-card-bg;
   }
 
   &-pie {
-    background:
-      linear-gradient(
-        180deg,
-        rgb(247 247 255) 0%,
-        rgb(236 236 255) 100%
-      );
+    background: @pie-card-bg;
   }
 
   .statistic {
@@ -45,7 +48,6 @@
 
   .title {
     margin: 0;
-    color: #1d2129;
   }
 
   :global(.arco-statistic-content) {
@@ -55,7 +57,6 @@
     :global(.arco-statistic-value) {
       font-size: 24px;
       line-height: 28px;
-      color: #1d2129;
     }
   }
 
@@ -63,7 +64,7 @@
     &-text {
       font-size: 12px;
       font-weight: 400;
-      color: #4e5969;
+      color: var(--color-text-2);
     }
   }
 
@@ -78,33 +79,18 @@
   }
 }
 
-body[arco-theme="dark"] {
+body[arco-theme='dark'] {
   .card {
     &-line {
-      background:
-        linear-gradient(
-          180deg,
-          rgb(242 249 254) 0%,
-          rgb(230 244 254) 100%
-        );
-    }
-
-    &-interval {
-      background:
-        linear-gradient(
-          180deg,
-          rgb(245 254 242) 0%,
-          rgb(230 254 238) 100%
-        );
+      background: @line-card-dark-bg;
     }
 
     &-pie {
-      background:
-        linear-gradient(
-          180deg,
-          rgb(247 247 255) 0%,
-          rgb(236 236 255) 100%
-        );
+      background: @pie-card-dark-bg;
+    }
+
+    &-interval {
+      background: @interval-card-dark-bg;
     }
   }
 }
